--- a/app/src/main/res/layout/activity_main_khoonline.xml
+++ b/app/src/main/res/layout/activity_main_khoonline.xml
@@ -48,7 +48,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/ "
+        android:id="@+id/lnHiden"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="end"
